--- a/group-companies.css
+++ b/group-companies.css
@@ -58,6 +58,6 @@
 .gc-circles-section {
   position: relative;
   background: #e5e6e7;
-  height: 22vw;
+  height: 19vw;
   overflow: visible;
 }
